<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context="no.woact.marchr16.menu.SettingsFragment">
	
	<TextView
		android:id="@+id/txtDifficulty"
		android:layout_width="wrap_content"
		android:layout_height="42dp"
		android:layout_marginStart="24dp"
		android:layout_marginTop="265dp"
		android:text="@string/strSettingsDifficulty"
		android:textAlignment="center"
		android:textSize="20sp"
		android:textStyle="bold"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />
	
	<TextView
		android:id="@+id/txtResetSettings"
		android:layout_width="wrap_content"
		android:layout_height="42dp"
		android:layout_marginStart="24dp"
		android:layout_marginTop="335dp"
		android:text="@string/strSettingsReset"
		android:textAlignment="center"
		android:textSize="20sp"
		android:textStyle="bold"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />
	
	<TextView
		android:id="@+id/txtVolumeSettings"
		android:layout_width="wrap_content"
		android:layout_height="42dp"
		android:layout_marginStart="24dp"
		android:layout_marginTop="195dp"
		android:text="@string/strSettingsVolume"
		android:textAlignment="center"
		android:textSize="20sp"
		android:textStyle="bold"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />
	
	<TextView
		android:id="@+id/txtSettingsHeader"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="120dp"
		android:text="@string/strSettings"
		android:textAppearance="@style/TextAppearance.AppCompat.Headline"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toTopOf="parent" />
	
	<SeekBar
		android:id="@+id/sldrVolumeLevel"
		android:layout_width="154dp"
		android:layout_height="38dp"
		android:layout_marginEnd="24dp"
		android:layout_marginTop="190dp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintTop_toTopOf="parent" />
	
	<Button
		android:id="@+id/btnDifficultyEasy"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginEnd="120dp"
		android:layout_marginTop="255dp"
		android:text="@string/strDifficultyEasy"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toTopOf="parent" />
	
	<Button
		android:id="@+id/btnDifficultyHard"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginEnd="24dp"
		android:layout_marginTop="255dp"
		android:text="@string/strDifficultyHard"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toTopOf="parent" />
	
	<Button
		android:id="@+id/btnResetHighScore"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginEnd="24dp"
		android:layout_marginTop="325dp"
		android:text="@string/strSettingsResetBtn"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>
